add login, access token and refresh token

--- a/DevHabit/src/DevHabit.Api/appsettings.json
+++ b/DevHabit/src/DevHabit.Api/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "your-secret-key-here-that-should-be-long-enough",
+    "Issuer": "dev-habit.api",
+    "Audience": "dev-habit.app",
+    "ExpirationInMinutes": 30,
+    "RefreshTokenExpirationInDays": 7
+  }
 }
